Fri May 27 09:49:56 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * ace/Monitor_Control/Linux_Network_Interface_Monitor.cpp:
          Made changes to satisfy Coverity and the GNU 4.6 gcc compiler.
          fgets returns a void*. This is stored in dummy. We use 
          ACE_UNUSED_ARG to fool the 4.6 gcc compiler.

Thu May 26 14:27:50 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * ace/Monitor_Control/Linux_Network_Interface_Monitor.cpp:
          Resolved gcc 4.6 warning: variable was set but not used.

Thu May 26 14:11:57 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * ace/Monitor_Control/Linux_Network_Interface_Monitor.cpp:
          Resolved gcc 4.6 warning: variable was set but not used.

Thu May 26 11:39:54 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/bczar/bczar.html:
          Added a yum install with all packages you could need on FC

Thu May 26 13:09:50 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * tests/Compiler_Features_10_Test.cpp:
          Resolved coverity warnings.

Mon May 23 07:55:41 UTC 2011  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * tests/QtReactor_Test.h:
        * tests/QtReactor_Test.cpp:
        Changed deprecated qt4 functions and includes.

Mon May 23 07:10:41 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/APG/Naming/Name_Binding.h:
        * netsvcs/lib/Client_Logging_Handler.cpp:
          Fixed incorrect delete

Mon May 23 06:55:37 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/APG/Streams/MessageInfo.h:
          Pass argument as const& to fix Coverity error

        * protocols/ace/INet/BidirStreamBuffer.h:
        * protocols/ace/INet/BufferedStreamBuffer.h:
        * protocols/ace/INet/HTTP_BasicAuthentication.cpp:
        * protocols/ace/RMCast/Link.cpp:
          Fixed memory leaks, thanks to Max Zhou <earthdog at 126 dot com>
          for creating the patch, this fixes bugzilla 3959
